--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/cineglance
+MONGODB_URI=mongodb+srv://patelhardik999666:9zaNAcOE96aTGKGD@cluster0.dma01.mongodb.net/cineglance?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key_change_this_in_production
 JWT_EXPIRE=30d
 COOKIE_EXPIRE=30
