--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,8 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
-      }
+      },
+      "framework": "vite"
     }
   ],
   "routes": [
