--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,18 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
