--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
-  "framework": "vite",
   "builds": [
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     },
     {
@@ -22,6 +22,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/backend/server.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/frontend/index.html"
     }
   ],
   "headers": [
@@ -30,7 +34,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://your-domain.vercel.app"
         },
         {
           "key": "Access-Control-Allow-Methods",
@@ -39,6 +43,10 @@
         {
           "key": "Access-Control-Allow-Headers",
           "value": "Origin, X-Requested-With, Content-Type, Accept, Authorization, Cache-Control, X-Access-Token"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
         }
       ]
     }
@@ -46,5 +54,10 @@
   "outputDirectory": "frontend/dist",
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "backend/server.js": {
+      "maxDuration": 10
+    }
   }
 }
