--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,8 +2,7 @@
   "version": 2,
   "functions": {
     "api/server.js": {
-      "runtime": "@vercel/node",
-      "includeFiles": ["dist/**"]
+      "includeFiles": "dist/**"
     }
   },
   "routes": [
