--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,4 @@
 {
   "version": 2,
-  "functions": {
-    "api/server.js": {
-      "includeFiles": "dist/**"
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/server.js"
-    }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/api/server.js" }]
 }
